# robot-gitee-openeuler-review

./: BUILD.bazel  README.md  README_zh_CN.md  WORKSPACE  actions.go  approve.go  build.sh  config.go  freeze.go  go.mod  go.sum  lgtm.go  main.go  merge.go  permission.go  robot.go
.github/workflows/: reviewcode.yaml
